objects/vlocity_cmt__PaymentMethod__c.object
<CustomObject>
    <description>Payment Method stores credit card or other payment processing information for an account.</description>
    <fields>
        <fullName>BankEntityName__c</fullName>
        <label>BankEntityName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ExternalBankEntities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CardHolderDocumentNumber__c</fullName>
        <description>Card Holder Document Number</description>
        <inlineHelpText>Card Holder Document Number</inlineHelpText>
        <label>Card Holder Document Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardHolderDocumentType__c</fullName>
        <description>Card Holder Document Type</description>
        <inlineHelpText>Card Holder Document Type</inlineHelpText>
        <label>Card Holder Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DocumentTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cbu__c</fullName>
        <label>Cbu</label>
        <length>22</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Concatenate__c</fullName>
        <formula>IF( ISPICKVAL(vlocity_cmt__MethodType__c, &quot;Bank Account&quot;) ,IF(alias__c!=null,&quot;ALIAS &quot; &amp; alias__c, &quot;CBU XXXXXXXXXXXXXXXXXX&quot;&amp;vlocity_cmt__Last4Numbers__c ) ,TEXT(vlocity_cmt__CardType__c) &amp; &quot; XXXX-XXXX-XXXX-&quot;&amp;vlocity_cmt__Last4Numbers__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatCardLast4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <description>security code de la entidad bancaria</description>
        <label>SecurityCode</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alias__c</fullName>
        <description>Campo para indicar el alias para una cuenta bancaria</description>
        <label>Alias</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>31</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardHolderName__c</fullName>
        <label>Card Holder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardNumber__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardType__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>DISCOVER</fullName>
                </value>
                <value>
                    <fullName>UCB</fullName>
                </value>
                <value>
                    <fullName>MASTERCARD</fullName>
                </value>
                <value>
                    <fullName>377</fullName>
                    <label>VISA</label>
                </value>
                <value>
                    <fullName>CABAL</fullName>
                </value>
                <value>
                    <fullName>CREDENCIAL</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS</fullName>
                </value>
                <value>
                    <fullName>DINERS</fullName>
                </value>
                <value>
                    <fullName>NARANJA</fullName>
                </value>
                <value>
                    <fullName>KADICARD</fullName>
                </value>
                <value>
                    <fullName>TARJETA AZUL</fullName>
                </value>
                <value>
                    <fullName>TARJETA ARGENTA</fullName>
                </value>
                <value>
                    <fullName>NEVADA</fullName>
                </value>
                <value>
                    <fullName>VISA PROVENCRED</fullName>
                </value>
                <value>
                    <fullName>CARTA AUTOMATICA</fullName>
                </value>
                <value>
                    <fullName>TARJETA GRUPAR</fullName>
                </value>
                <value>
                    <fullName>CREDIMAS</fullName>
                </value>
                <value>
                    <fullName>TARJETA NATIVA</fullName>
                </value>
                <value>
                    <fullName>MIRA</fullName>
                </value>
                <value>
                    <fullName>TARJETA SHOPPING</fullName>
                </value>
                <value>
                    <fullName>SIDECREER</fullName>
                </value>
                <value>
                    <fullName>NARANJA-VISA</fullName>
                </value>
                <value>
                    <fullName>COOPEPLUS</fullName>
                </value>
                <value>
                    <fullName>DATA 2000</fullName>
                </value>
                <value>
                    <fullName>TARJETA CREDICASH</fullName>
                </value>
                <value>
                    <fullName>TARJETA SOL</fullName>
                </value>
                <value>
                    <fullName>TARJETA TITANIO</fullName>
                </value>
                <value>
                    <fullName>TARJETA CMR</fullName>
                </value>
                <value>
                    <fullName>TARJETA MAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationMonth__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationYear__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Last4Numbers__c</fullName>
        <label>Last4Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MethodType__c</fullName>
        <label>Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <default>true</default>
                    <label>Efectivo</label>
                </value>
                <value>
                    <fullName>1201</fullName>
                    <label>Debito a Proxima Factura</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <label>Tarjeta de Credito</label>
                </value>
                <value>
                    <fullName>Transferencia Bancaria</fullName>
                </value>
                <value>
                    <fullName>4002</fullName>
                    <label>Tarjeta de Debito</label>
                </value>
                <value>
                    <fullName>9998</fullName>
                    <label>Descuento de Saldo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RoutingTransitNumber__c</fullName>
        <label>Routing Transit Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__AccountId__c</columns>
        <columns>vlocity_cmt__MethodType__c</columns>
        <columns>vlocity_cmt__CardNumber__c</columns>
        <columns>vlocity_cmt__CardType__c</columns>
        <columns>Cbu__c</columns>
        <columns>alias__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BankEntityName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EnforceActivePaymentMethodInAutoPay</fullName>
        <active>true</active>
        <errorConditionFormula>Id = vlocity_cmt__AccountId__r.vlocity_cmt__AutoPaymentMethodId__c &amp;&amp; ! vlocity_cmt__IsActive__c &amp;&amp; Id != null</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__IsActive__c</errorDisplayField>
        <errorMessage>This payment method is used in auto pay and it can&apos;t be inactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__ExpirationYearIsValid</fullName>
        <active>false</active>
        <description>Check that ExpirationYear is a valid year and in the future</description>
        <errorConditionFormula>AND( (ISPICKVAL(vlocity_cmt__MethodType__c,&apos;Credit Card&apos;)),(OR(!ISNUMBER(vlocity_cmt__ExpirationYear__c), VALUE(vlocity_cmt__ExpirationYear__c)&lt; YEAR( TODAY() ))))</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ExpirationYear__c</errorDisplayField>
        <errorMessage>Expiration Year is not valid</errorMessage>
    </validationRules>
</CustomObject>